--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,8 +78,17 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
+    // Preferences DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha04"
 
+    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
 
+    def room_version = "2.4.3"
+    //Room DB
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation 'androidx.room:room-ktx:2.4.3'
+    kapt "androidx.room:room-compiler:2.4.3"
 
 
 }
